--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>io.quarkus</groupId>
+        	<artifactId>quarkus-resteasy-jackson</artifactId>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
