--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,29 @@
+########## LOGGING ##########
 quarkus.log.level=${LOG_LEVEL\:INFO}
-#quarkus.log.category."io.qiot.manufacturing".level=DEBUG
+%dev.quarkus.log.category."io.qiot.manufacturing".level=DEBUG
+quarkus.log.category."io.qiot.manufacturing".level=${QIOT_LOG_LEVEL:INFO}
 %dev.quarkus.log.console.color=true
 
+
+########## HTTP ##########
 %prod.quarkus.http.port=${HTTP_PORT\:8080}
 %dev.quarkus.http.port=5201
 quarkus.resteasy.path=/v1
 
-## DATA
 
+########## OPENAPI ##########
+quarkus.swagger-ui.always-include=true
+
+
+########## DATA ##########
 quarkus.mongodb.connection-string = ${MONGODB_URL:mongodb://localhost:27018}
 quarkus.mongodb.database=${MONGODB_DATABASE:qiot_manufacturing}
 quarkus.mongodb.credentials.username=${MONGODB_USER:qiotmanufacturing}
 quarkus.mongodb.credentials.password=${MONGODB_PASSWORD:qiotmanufacturingpassword}
 
-## STREAM - productline from the datacenter
 
-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_URL\:localhost\:9092}
+########## STREAM ##########
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_URL:localhost:9092}
 
 # Configure the Kafka sink (we write to it)
 mp.messaging.outgoing.productline.auto-generated-client-id=true
