--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ quarkus.resteasy.path=/v1
 quarkus.swagger-ui.always-include=true
 
 
+########## APP data ##########
+qiot.productline.generate=${GENERATE_RANDOM_PRODUCTLINE:false}
+
+
 ########## DATA ##########
 quarkus.mongodb.connection-string = ${MONGODB_URL:mongodb://localhost:27018}
 quarkus.mongodb.database=${MONGODB_DATABASE:qiot_manufacturing}
@@ -30,4 +34,5 @@ mp.messaging.outgoing.productline.auto-generated-client-id=true
 mp.messaging.outgoing.productline.connector=smallrye-kafka
 mp.messaging.outgoing.productline.topic=productline
 mp.messaging.outgoing.productline.failure-strategy=ignore
-mp.messaging.outgoing.productline.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.outgoing.productline.value.serializer=io.qiot.manufacturing.datacenter.productline.util.serializer.GlobalProductLineSerializer
+#mp.messaging.outgoing.productline.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
