--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -54,5 +54,5 @@ jobs:
       - name: Push Image
         run: |
           mvn -B -Pprod,native oc:build oc:push                          \
-          -Djkube.docker.push.username=${{ secrets.QUAY_USERNAME }}      \
-          -Djkube.docker.push.password=${{ secrets.QUAY_PASSWORD }}
+          -Djkube.docker.push.username=${{ secrets.QUAY_MANUFACTURING_USERNAME }}      \
+          -Djkube.docker.push.password=${{ secrets.QUAY_MANUFACTURING_PASSWORD }}
