--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.qiot.manufacturing.datacenter</groupId>
     <artifactId>product-line-service</artifactId>
-    <version>1.0.0.beta1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <parent>
         <groupId>io.qiot.manufacturing</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.0.beta1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <scm>
         <connection>scm:git:https://github.com/qiot-project/qiot-manufacturing-datacenter-productline.git</connection>
@@ -57,12 +57,12 @@
         <dependency>
             <groupId>io.qiot.manufacturing.all</groupId>
             <artifactId>domain-model</artifactId>
-            <version>1.0.0.beta1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.qiot.manufacturing.datacenter</groupId>
             <artifactId>domain-model</artifactId>
-            <version>1.0.0.beta1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.qiot.ubi.all</groupId>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>io.qiot.manufacturing.datacenter</groupId>
             <artifactId>utilities</artifactId>
-            <version>1.0.0.beta1-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
         <!-- DATA -->
         <dependency>
