--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,71 @@
-name: Release
+name: Build and Release
 
 on:
+  workflow_dispatch:
+  
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
   push:
     branches:
-      - release
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
+  snapshot:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[RELEASE]')"
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v2
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Setup Maven settings.xml
+        uses: whelk-io/maven-settings-xml-action@v18
+        with:
+          servers: |
+            [
+              {
+                "id": "qiot-central",
+                "username": "${env.ARTIFACTORY_USERNAME_REF}",
+                "password": "${env.ARTIFACTORY_TOKEN_REF}"
+              },
+              {
+                "id": "qiot-snapshots",
+                "username": "${env.ARTIFACTORY_USERNAME_REF}",
+                "password": "${env.ARTIFACTORY_TOKEN_REF}"
+              }
+            ]
+      - name: Build with Maven
+        env:
+           ARTIFACTORY_USERNAME_REF: ${{ secrets.ARTIFACTORY_USERNAME }}
+           ARTIFACTORY_TOKEN_REF: ${{ secrets.ARTIFACTORY_TOKEN }}
+           # BUILD_ENV: 'github-actions'
+        run: mvn -B deploy
+      - name: Build with Maven
+        env:
+           ARTIFACTORY_USERNAME_REF: ${{ secrets.ARTIFACTORY_USERNAME }}
+           ARTIFACTORY_TOKEN_REF: ${{ secrets.ARTIFACTORY_TOKEN }}
+        run: mvn -B -Pprod,native deploy
+      - name: Push Image
+        run: |
+          mvn -B -Pprod,native oc:build oc:push                          \
+          -Djkube.docker.push.username=${{ secrets.QUAY_MANUFACTURING_USERNAME }}      \
+          -Djkube.docker.push.password=${{ secrets.QUAY_MANUFACTURING_PASSWORD }}
+
+  release:
+    runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, '[RELEASE]')"
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
@@ -50,7 +108,7 @@ jobs:
           SCM_TOKEN_REF: ${{ secrets.GITHUB_TOKEN }}
           ARTIFACTORY_USERNAME_REF: ${{ secrets.ARTIFACTORY_USERNAME }}
           ARTIFACTORY_TOKEN_REF: ${{ secrets.ARTIFACTORY_TOKEN }}
-#          BUILD_ENV: 'github-actions'
+          # BUILD_ENV: 'github-actions'
         run: |
           ./mvnw --batch-mode release:prepare
       - name: Push the release
@@ -60,8 +118,10 @@ jobs:
           ARTIFACTORY_USERNAME_REF: ${{ secrets.ARTIFACTORY_USERNAME }}
           ARTIFACTORY_TOKEN_REF: ${{ secrets.ARTIFACTORY_TOKEN }}
           ARTIFACTORY_TOKEN:  ${{ secrets.ARTIFACTORY_TOKEN }}
-#          BUILD_ENV: 'github-actions'
-        run: ./mvnw --batch-mode release:perform
+          # BUILD_ENV: 'github-actions'
+        run: ./mvnw --batch-mode release:perform -Pprod,native oc:build oc:push                          \
+          -Djkube.docker.push.username=${{ secrets.QUAY_MANUFACTURING_USERNAME }}      \
+          -Djkube.docker.push.password=${{ secrets.QUAY_MANUFACTURING_PASSWORD }}
       - name: Rollback if failure
         if: ${{ failure() }}
         run: ./mvnw --batch-mode release:rollback
