--- a/.github/workflows/containerimage.yml
+++ b/.github/workflows/containerimage.yml
@@ -3,9 +3,9 @@ name: Image Release
 on:
   workflow_dispatch:
   
-  push:
-    tags:
-      - '*'
+  release:
+    types:
+      - created
   
 jobs:
   build:
