--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -5,10 +5,12 @@ on:
   
   push:
     branches:
-      - main
+      - develop
+      - release
   pull_request:
     branches:
-      - main
+      - develop
+      - release
 
 jobs:
   snapshot:
