--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,10 @@
 name: Github Release
 
 on:
-  [push, pull_request]:
+  push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
