--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.qiot.manufacturing.datacenter</groupId>
     <artifactId>product-line-service</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <parent>
         <groupId>io.qiot.manufacturing</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.8</version>
     </parent>
     <scm>
         <connection>scm:git:https://github.com/qiot-project/qiot-manufacturing-datacenter-productline.git</connection>
@@ -15,11 +15,12 @@
         <url>https://github.com/qiot-project/qiot-manufacturing-datacenter-productline</url>
         <tag>HEAD</tag>
     </scm>
+    
     <repositories>
         <repository>
             <id>qiot-central</id>
             <name>a0lz61zjcqpyh-artifactory-primary-0-releases</name>
-            <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-release-local</url>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-release</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
@@ -27,12 +28,51 @@
         <repository>
             <id>qiot-snapshots</id>
             <name>a0lz61zjcqpyh-artifactory-primary-0-snapshots</name>
-            <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-snapshot-local</url>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-snapshot</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
         </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>qiot-central</id>
+            <name>a0lz61zjcqpyh-artifactory-primary-0-releases</name>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>qiot-snapshots</id>
+            <name>a0lz61zjcqpyh-artifactory-primary-0-snapshots</name>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <distributionManagement>
+        <repository>
+            <id>qiot-central</id>
+            <name>a0lz61zjcqpyh-artifactory-primary-0-releases</name>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <snapshotRepository>
+            <id>qiot-snapshots</id>
+            <name>a0lz61zjcqpyh-artifactory-primary-0-snapshots</name>
+            <url>https://hackfest.jfrog.io/artifactory/hackfest-libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </snapshotRepository>
+    </distributionManagement>
+    
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -54,22 +94,22 @@
         <dependency>
             <groupId>io.qiot.manufacturing.all</groupId>
             <artifactId>domain-model</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4</version>
         </dependency>
         <dependency>
             <groupId>io.qiot.manufacturing.datacenter</groupId>
             <artifactId>domain-model</artifactId>
-            <version>1.0.5</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>io.qiot.ubi.all</groupId>
             <artifactId>utilities</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>io.qiot.manufacturing.datacenter</groupId>
             <artifactId>utilities</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.5</version>
         </dependency>
         <!-- DATA -->
         <dependency>
@@ -116,7 +156,6 @@
             <plugin>
                 <groupId>org.eclipse.jkube</groupId>
                 <artifactId>openshift-maven-plugin</artifactId>
-                <version>1.3.0</version>
             </plugin>
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
@@ -178,51 +217,6 @@
                 <jkube.build.strategy>jib</jkube.build.strategy>
                 <jkube.generator.name>quay.io/qiotmanufacturing/datacenter-product-line:${project.version}</jkube.generator.name>
             </properties>
-        </profile>
-        <profile>
-            <id>github-actions</id>
-            <activation>
-                <property>
-                    <name>env.BUILD_ENV</name>
-                    <value>github-actions</value>
-                </property>
-            </activation>
-            <repositories>
-                <repository>
-                    <id>qiot-central</id>
-                    <name>a0lz61zjcqpyh-artifactory-primary-0-releases</name>
-                    <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-release-local</url>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </repository>
-                <repository>
-                    <id>qiot-snapshots</id>
-                    <name>a0lz61zjcqpyh-artifactory-primary-0-snapshots</name>
-                    <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-snapshot-local</url>
-                    <releases>
-                        <enabled>false</enabled>
-                    </releases>
-                </repository>
-            </repositories>
-            <pluginRepositories>
-                <pluginRepository>
-                    <id>qiot-central</id>
-                    <name>a0lz61zjcqpyh-artifactory-primary-0-releases</name>
-                    <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-release-local</url>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </pluginRepository>
-                <pluginRepository>
-                    <id>qiot-snapshots</id>
-                    <name>a0lz61zjcqpyh-artifactory-primary-0-snapshots</name>
-                    <url>https://qiotproject.jfrog.io/artifactory/qiot-libs-snapshot-local</url>
-                    <releases>
-                        <enabled>false</enabled>
-                    </releases>
-                </pluginRepository>
-            </pluginRepositories>
         </profile>
         <profile>
             <id>native</id>
